unpackaged/main/default/objects/Project__c/fields/CalendarPeriod__c.field-meta.xml
<CustomField>
    <fullName>CalendarPeriod__c</fullName>
    <formula>IF(ISBLANK( StartDate__c ), "Ongoing", 

"CY" &amp; RIGHT(TEXT(YEAR( StartDate__c )),2)

&amp;

CASE(MONTH( StartDate__c ),
1, "Q1" ,
2, "Q1",
3, "Q1",
4, "Q2",
5, "Q2",
6, "Q2",
7, "Q3",
8, "Q3",
9, "Q3",
10, "Q4",
11, "Q4",
12, "Q4",
"None")

)</formula>
    <label>Period</label>
    <type>Text</type>
</CustomField>