unpackaged/main/default/objects/Project__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <label>Days Purchased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>