unpackaged/main/default/objects/Project__c/fields/DaysCompleted__c.field-meta.xml
<CustomField>
    <fullName>DaysCompleted__c</fullName>
    <label>Days Completed</label>
    <summarizedField>ResourceBooking__c.TotalBillableDays__c</summarizedField>
    <summaryFilterItems>
        <field>ResourceBooking__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ResourceBooking__c.IsBillable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ResourceBooking__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>