unpackaged/main/default/objects/Project__c/fields/Etimated_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Etimated_Finish_Date__c</fullName>
    <label>Estimated Finish Date</label>
    <type>Date</type>
</CustomField>