unpackaged/main/default/objects/Project__c/fields/LastActivity__c.field-meta.xml
<CustomField>
    <fullName>LastActivity__c</fullName>
    <formula>LastActivityDate</formula>
    <label>Last Activity</label>
    <type>Date</type>
</CustomField>