unpackaged/main/default/objects/Project__c/fields/MilestonesPercentComplete__c.field-meta.xml
<CustomField>
    <fullName>MilestonesPercentComplete__c</fullName>
    <formula>IF( MilestonesSum__c &lt;= 0, 
  0,
  MilestonesSumCompleted__c /  MilestonesSum__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestones Percent Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>