unpackaged/main/default/objects/Project__c/fields/MilestonesProgress__c.field-meta.xml
<CustomField>
    <fullName>MilestonesProgress__c</fullName>
    <formula>IMAGE(
  IF(MilestonesPercentComplete__c &lt;= 0.2, "/img/samples/color_red.gif",
    IF(MilestonesPercentComplete__c &lt; 1, "/img/samples/color_yellow.gif", "/img/samples/color_green.gif" )
  ),
  TEXT(MilestonesPercentComplete__c),
  14, 
  (MilestonesPercentComplete__c*200)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestones Progress</label>
    <type>Text</type>
</CustomField>