unpackaged/main/default/objects/Project__c/fields/MilestonesSum__c.field-meta.xml
<CustomField>
    <fullName>MilestonesSum__c</fullName>
    <label>Milestones</label>
    <summaryForeignKey>ProjectMilestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>