unpackaged/main/default/objects/Project__c/fields/MilestonesSumCompleted__c.field-meta.xml
<CustomField>
    <fullName>MilestonesSumCompleted__c</fullName>
    <label>Milestones Completed</label>
    <summaryFilterItems>
        <field>ProjectMilestone__c.IsComplete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ProjectMilestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>