unpackaged/main/default/objects/Project__c/fields/Passport_Credits_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Passport_Credits_Purchased__c</fullName>
    <formula>Opportunity__r.Passport_Credits_Purchased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credits Purchased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>