unpackaged/main/default/objects/Project__c/fields/ProjectPercentComplete__c.field-meta.xml
<CustomField>
    <fullName>ProjectPercentComplete__c</fullName>
    <formula>IF( MilestonesSum__c &lt;=0,
 TaskHoursPercentComplete__c,
  (MilestonesPercentComplete__c+TaskHoursPercentComplete__c)/2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Percent Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>