unpackaged/main/default/objects/Project__c/fields/ProjectProgress__c.field-meta.xml
<CustomField>
    <fullName>ProjectProgress__c</fullName>
    <formula>IMAGE(
  IF(ProjectPercentComplete__c &lt;= 0.2, "/img/samples/color_red.gif",
    IF(ProjectPercentComplete__c &lt; 1, "/img/samples/color_yellow.gif", "/img/samples/color_green.gif" )
  ),
  TEXT(ProjectPercentComplete__c),
  14, 
  (ProjectPercentComplete__c*200)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Progress</label>
    <type>Text</type>
</CustomField>