unpackaged/main/default/objects/Project__c/fields/TaskDaysRemaining__c.field-meta.xml
<CustomField>
    <fullName>TaskDaysRemaining__c</fullName>
    <formula>IF(TaskHoursRemaining__c&gt;0, /* can't divide by zero so check if task hours is zero */
  CEILING(TaskHoursRemaining__c/7), /* divide hours remaining by working hours in a day */
  0 /* return zero days for zero hours */
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>