unpackaged/main/default/objects/Project__c/fields/TaskHoursCompleted__c.field-meta.xml
<CustomField>
    <fullName>TaskHoursCompleted__c</fullName>
    <label>Task Hours Completed</label>
    <summarizedField>ProjectTask__c.Hours__c</summarizedField>
    <summaryFilterItems>
        <field>ProjectTask__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>