unpackaged/main/default/objects/Project__c/fields/TaskHoursPercentComplete__c.field-meta.xml
<CustomField>
    <fullName>TaskHoursPercentComplete__c</fullName>
    <formula>IF( TaskHoursTotal__c &lt;= 0, 
  0,
  TaskHoursCompleted__c / TaskHoursTotal__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Hours Percent Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>