unpackaged/main/default/objects/Project__c/fields/TaskHoursProgress__c.field-meta.xml
<CustomField>
    <fullName>TaskHoursProgress__c</fullName>
    <formula>IMAGE(
  IF(TaskHoursPercentComplete__c &lt;= 0.2, "/img/samples/color_red.gif",
    IF(TaskHoursPercentComplete__c &lt; 1, "/img/samples/color_yellow.gif", "/img/samples/color_green.gif" )
  ),
  TEXT(TaskHoursPercentComplete__c),
  14, 
  (TaskHoursPercentComplete__c*200)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Hours Progress</label>
    <type>Text</type>
</CustomField>