unpackaged/main/default/objects/Project__c/fields/TaskHoursTotal__c.field-meta.xml
<CustomField>
    <fullName>TaskHoursTotal__c</fullName>
    <label>Task Hours Total</label>
    <summarizedField>ProjectTask__c.Hours__c</summarizedField>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>