unpackaged/main/default/objects/Project__c/fields/TotalHoursRemaining__c.field-meta.xml
<CustomField>
    <fullName>TotalHoursRemaining__c</fullName>
    <label>Total Hours Remaining</label>
    <summarizedField>ProjectTask__c.Hours__c</summarizedField>
    <summaryFilterItems>
        <field>ProjectTask__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>