unpackaged/main/default/objects/Project__c/recordTypes/ResourceProject.recordType-meta.xml
<RecordType>
    <fullName>ResourceProject</fullName>
    <active>true</active>
    <description>A resource Project used for EXTERNAL services &amp; consultancy project management.</description>
    <label>Resource Project</label>
</RecordType>