unpackaged/main/default/objects/Project__c/recordTypes/StandardProject.recordType-meta.xml
<RecordType>
    <fullName>StandardProject</fullName>
    <active>true</active>
    <description>A standard Project used for INTERNAL project management.</description>
    <label>Standard Project</label>
</RecordType>