unpackaged/main/default/objects/Project__c/listViews/AllActiveProjects.listView-meta.xml
<ListView>
    <fullName>AllActiveProjects</fullName>
    <columns>NAME</columns>
    <columns>CalendarPeriod__c</columns>
    <columns>Status__c</columns>
    <columns>ProjectProgress__c</columns>
    <columns>ProjectPercentComplete__c</columns>
    <columns>IsActive__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Projects</label>
</ListView>