unpackaged/main/default/objects/Project__c/listViews/AllProjects.listView-meta.xml
<ListView>
    <fullName>AllProjects</fullName>
    <columns>NAME</columns>
    <columns>CalendarPeriod__c</columns>
    <columns>Status__c</columns>
    <columns>ProjectProgress__c</columns>
    <columns>ProjectPercentComplete__c</columns>
    <columns>IsActive__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>