unpackaged/main/default/objects/Project__c/listViews/V_Roy_Projects.listView-meta.xml
<ListView>
    <fullName>V_Roy_Projects</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <columns>FinishDate__c</columns>
    <columns>Opportunity__c</columns>
    <columns>TotalHoursRemaining__c</columns>
    <columns>TotalHoursCompleted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>VRoy</value>
    </filters>
    <label>V. Roy Projects</label>
    <sharedTo>
        <group>BIM_Technical_Team</group>
    </sharedTo>
</ListView>